martian-derive/tests/ui_martian_struct/test_missing_martian_type.stderr
error[E0277]: the trait bound `Foo: MartianFileType` is not satisfied
   --> $DIR/test_missing_martian_type.rs:5:10
    |
5   | #[derive(MartianStruct)]
    |          ^^^^^^^^^^^^^ the trait `MartianFileType` is not implemented for `Foo`
    |
    = note: required because of the requirements on the impl of `AsMartianPrimaryType` for `Foo`
    = note: required because of the requirements on the impl of `AsMartianBlanketType` for `Foo`
note: required by `as_martian_blanket_type`
   --> $DIR/mro.rs:275:5
    |
275 |     fn as_martian_blanket_type() -> MartianBlanketType;
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: this error originates in the derive macro `MartianStruct` (in Nightly builds, run with -Z macro-backtrace for more info)
